fix banner visible when fold closed

--- a/web/src/pages/EnrollmentPage/style.scss
+++ b/web/src/pages/EnrollmentPage/style.scss
@@ -41,4 +41,9 @@
       color: var(--fg-success);
     }
   }
+
+  .message-template-fold.folded > .fold-content {
+    padding-bottom: 0;
+    padding-left: 0;
+  }
 }
